# openstackservice

./: README.md  api.py  db.py
openstack/: down_image.py
pythonstudy/: callble.py
restapi/: README.md  requirements.txt  setup.cfg  setup.py
restapi/restapi/: paste-api.ini  router.py  server.py  servers.py  service.py  versions.py  wsgi.py
rpc/oslo-messaging-clients/: README  requirements.txt  rpc-server
rpc/oslo-messaging-clients/.ENV/local/: bin  include  lib
rpc/oslo-messaging-clients/configs/: oslo.messaging.dispatch.conf
sdk/: clouds.yaml  connect.py  sdktest.py
wsgi/: app.py  configured.ini  middleware.py  paste-api.ini  pastedeploy.py  pipelinedemo.py  readme  readme.md
