[metadata]
name = restapi
version = 0.0.1
summary = Openstack Rest API Demo
description-file = README.md
author = yuxingw
author-email = 840814120@qq.com
classifier =
    Environment :: Web Environment
    Intended Audience :: Developers
    Intended Audience :: Education
    License :: OSI Approved :: GNU General Public License v2 (GPLv2)
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7

[global]
setup-hooks =
    pbr.hooks.setup_hook

[files]
packages =
    restapi

[entry_points]
console_scripts =
